# Chess

./: .gitignore  Asset-Attribution.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
src/: assets.h  assets.hpp  logo.hpp  main.cpp  window.hpp
